Fix events search